welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: illegal start of simple expression
	if(val versLAvant=true){
           ^Program:8: error: ')' expected but '}' found.
}
^