welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbpas : Int, versLAvant: Boolean){
	if(val versLAvant=true){
		for(i<-1 to nbpas){avance()}
	} else { 
		recule()
	}
}
